# ai-chatbot-system

./: .env.example  .gitignore  .gitmessage  ARCHITECTURE.md  BRANCH_COMPARISON.md  DEMO_RELEASE_NOTES.md  Dockerfile  Dockerfile.demo  Dockerfile.multistage  Makefile  PERFORMANCE.md  PORTFOLIO_SHOWCASE.md  README.demo.md  README.md  README_DEMO.md  README_MAIN_BRANCH.md  REORGANIZATION_REPORT.md  branch_backup_20250822_185949.txt  docker-compose.demo.yml  docker-compose.load.yml  docker-compose.test.yml  docker-compose.tracing.yml  docker-compose.yml  main_branch_inventory.txt  manage.py  poetry.toml  pyproject.toml  pyproject.toml.minimal  render.yaml  requirements-dev.txt  requirements-prod.txt  requirements.txt  setup-hooks.sh  setup.py  setup_demo.sh  switch_version.sh  test_config.py  validate_demo.sh  verify_demo_ci.sh
.githooks/: README.md  commit-msg  pre-commit  prepare-commit-msg
.github/: RELEASE_TEMPLATE.md
.github/workflows/: ci-cd-security.yml  ci-cd-security.yml.disabled  ci-cd.yml  ci.yml  ci.yml.disabled.bak  demo-ci.yml  demo-monitor.yml  deploy.yml  deploy.yml.disabled  diagnostic.yml  docker-ci-cd.yml  docker-ci-cd.yml.disabled  load-test.yml  load-test.yml.disabled  main-poetry.yml  main-simple.yml  main.yml  simple-docker-ci.yml
api/: Dockerfile  __init__.py  config.py  health.py  main.py  metrics.py  requirements.txt
api/app/: config.py  main.py
api/app/auth/: unified_auth_service.py
api/app/cache/: __init__.py  cache_manager.py  embedding_store.py  semantic_search.py
api/app/middleware/: rate_limiter.py
api/app/models/: chat.py  metrics.py
api/app/routes/: chat.py  health.py  upload.py  websocket.py
api/app/services/: advanced_cost_optimizer.py  ai_safety_compliance.py  analytics_pipeline.py
api/app/streaming/: backpressure.py
api/app/tenancy/: __init__.py
api/app/utils/: token_counter.py
api/auth/: __init__.py  auth_middleware.py  jwt_handler.py  permissions.py
api/cache/: __init__.py  cache_manager.py  embeddings.py  semantic_cache.py
api/common/: __init__.py  middleware.py
api/core/: config.py
api/core/auth/: __init__.py  auth_service.py
api/core/cache/: __init__.py  cache_manager.py  semantic_cache.py
api/core/models/: __init__.py  anthropic_provider.py  fallback_handler.py  model_factory.py  openai_provider.py
api/core/streaming/: __init__.py  stream_handler.py  websocket_manager.py
api/database/: __init__.py  models.py  session.py
api/finops/: __init__.py  billing.py  cost_analyzer.py  cost_tracker.py
api/infrastructure/: connection_pool.py  global_routing.py  multi_region.py  websocket_manager.py  websocket_scalable.py
api/integrations/: enterprise_platform.py
api/middleware/: __init__.py  error_handler.py  rate_limiter.py  tenant_middleware.py  tracing.py
api/models/: __init__.py  chat.py
api/monitoring/: __init__.py  logging.py  metrics.py  tracing.py
api/orchestration/: __init__.py  fallback_manager.py  load_balancer.py  model_router.py
api/providers/: __init__.py  base.py  circuit_breaker.py  orchestrator.py  provider_a.py  provider_b.py
api/reliability/: __init__.py  circuit_breaker.py  retry_strategy.py  timeout_manager.py
api/routes/: health.py  websocket.py
api/streaming/: __init__.py  backpressure.py  reconnection.py  websocket_manager.py
api/tenancy/: isolation_manager.py  rate_limiter.py  tenant_middleware.py  usage_tracker.py
api/tests/: load_test.py  test_cache.py  test_chat.py  test_functions.py  test_llm.py  test_multimodal.py
api/utils/: cost_calculator.py  token_counter.py
api/v1/: __init__.py
api/websockets/: __init__.py  events.py  handlers.py  manager.py
api/ws_handlers/: __init__.py  events.py  handlers.py  manager.py
app/: __init__.py  main.py
app/orchestration/: model_router.py
app/providers/: anthropic_adapter.py  base_provider.py  llama_adapter.py  openai_adapter.py
backend/: .env.example  Dockerfile.demo  requirements.demo.txt  requirements.txt
backend/app/: ai_safety_pipeline.py  config.py  cost_optimizer.py  demo_config.py  image_processor.py  main.py  main_demo.py  websocket_manager.py
backend/tests/: conftest.py  test_cache.py  test_multimodal.py
benchmarks/: README.md  run_benchmarks.py
benchmarks/results/: failover_timing_latest.json  sample_metrics.json
config/ci/: verify_demo_ci.sh
config/requirements/: base.txt  dev.txt
docs/: ci-cd-demo.md
fantasy-football-ai-fixes/docker/: Dockerfile.api-gateway
finops/: README.md  cost_management_platform.py  docker-compose.finops.yml
finops/automation/: finops_scheduler.py
finops/config/: finops-config.yaml
finops/dashboard/: finops_dashboard.py
frontend/: Dockerfile.demo
frontend/lib/: api.ts  store.ts
infrastructure/disaster-recovery/: dr_automation.py
infrastructure/docker/: Dockerfile.backend  Dockerfile.frontend  docker-compose.yml
k8s/base/: api-deployment.yaml  configmap.yaml  hpa.yaml  kustomization.yaml  namespace.yaml  redis-deployment.yaml  secret.yaml  secret.yaml.example
k8s/production/: ingress.yaml  kustomization.yaml  prometheus-servicemonitor.yaml  redis-pvc-patch.yaml  redis-pvc.yaml
monitoring/observability/: custom_exporters.py
monitoring/prometheus/: prometheus.yml
scripts/: dependency_health_monitor.py  dependency_manager.py  dependency_reporter.py  dependency_visualizer.py  migrate_to_poetry.py  security_checks.py  test_requirements.py  validate_claims.py
scripts/migration/: update_references.py
scripts/utils/: manage.py
tests/: conftest.py  test_api.py  test_basic.py  test_provider_failover.py  test_smoke.py
tests/contract/: test_placeholder.py
tests/e2e/: test_failover_scenarios.py  test_multi_tenant_flow.py  test_user_journey.py
tests/integration/: test_api_endpoints.py  test_cache_integration.py  test_database_operations.py  test_model_switching.py  test_websocket_flow.py
tests/load_testing/: locustfile.py  requirements.txt  run_tests.sh
tests/unit/: test_auth_service.py  test_cache_service.py  test_model_factory.py  test_placeholder.py  test_rate_limiter.py  test_stream_service.py  test_tenant_manager.py
(+60 files in other folders)
